--- a/JSProjectTests/html/app.css
+++ b/JSProjectTests/html/app.css
@@ -1,59 +1,5 @@
 ﻿body {
-    font-family: 'Segoe UI', sans-serif;
-    padding: 5px;
-}
-
-a {
-    text-decoration: none;
-}
-
-h1, h2 {
-    font-weight: normal;
-}
-
-span {
-    font-style: italic;
-}
-
-.good {
-    color: #8CBF26;
-}
-
-.bad {
-    color: #E51400;
-}
-
-li {
-    font-weight: bold;
-	display: block;
-}
-
-li ul {
-	padding-left: 30px;
-}
-
-li li {
-	font-weight: normal;
-    color: #666;
-	margin-top: 2px;
-    display: block;
-}
-
-li.indent {
-    padding-left: 22px;
-}
-
-li li:first-child {
-   margin-top: 6px;
-}
-
-.ascii {
-    font-family: Arial, sans-serif;
-    color: #8CBF26;
-}
-
-li.group {
-	margin-top: 15px;
+    padding: 15px;
 }
 
 hr {
@@ -64,6 +10,20 @@ h1 {
     margin-bottom: 20px;
 }
 
-p {
-    margin-bottom: 15px;
+
+
+.error {
+	color: red;
+}
+
+.success {
+	color: green;
+}
+
+.working {
+	color: blue;
+}
+
+.new {
+	color: grey;
 }
