--- a/JSProjectTests/html/app.css
+++ b/JSProjectTests/html/app.css
@@ -51,3 +51,15 @@ h1 {
 .box > ul > li:last-child {
 	margin-bottom: 0px;
 }
+
+.page-header {
+	margin-top: 20px;
+}
+
+.page-header h1 {
+	margin-bottom: 10px;
+}
+
+.badge {
+	margin-left: 5px;
+}
